project('libvmaf', ['c', 'cpp'],
    version : '3.0.0',
    default_options : ['c_std=c11',
                       'cpp_std=c++11',
                       'warning_level=2',
                       'buildtype=release',
                       'default_library=both',
                      ],
    meson_version: '>= 0.56.1')

subdir('libvmaf/include')
subdir('libvmaf/src')
subdir('libvmaf/tools')
subdir('libvmaf/doc')
subdir('libvmaf/test')
