[project]
name = "vmaf-tiny"
version = "0.0.1"
description = "Tiny perceptual-quality models aligned against VMAF."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
dependencies = [
  "torch>=2.3",
  "lightning>=2.3",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
vmaf-tiny-train  = "vmaf_tiny.train:main"
vmaf-tiny-export = "vmaf_tiny.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmaf_tiny"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "RUF"]
