option('enable_tests',
    type: 'boolean',
    value: true,
    description: 'Build libvmaf tests')

option('enable_docs',
    type: 'boolean',
    value: true,
    description: 'Build libvmaf documentation')

option('enable_asm',
    type: 'boolean',
    value: true,
    description: 'Build asm files, if available')

option('enable_avx512',
    type: 'boolean',
    value: false,
    description: 'Build AVX-512 asm files, requires nasm 2.14')

option('install_rc',
    type: 'boolean',
    value: false,
    description: 'Add rc libs/bins to list of installed files')

option('built_in_models',
    type: 'boolean',
    value: true,
    description: 'Compile default vmaf models into the library')
