[metadata]
description-file = README.md

[flake8]
# First iteration: we ignore all flake8 errors, will come back to this, removing ignores 1 by 1 and cleaning up related code
ignore = E121,E123,E226,E241,E242,W292,E122,E124,E126,E127,E128,E131,E203,E222,E231,E251,E261,E262,E302,E501,E902,F401,F841,W391,E225,E265,E303,E201,E701,E301,E125,F812,W602
max-line-length = 160

# Usually ignored pep8 errors:
# E121 	continuation line under-indented for hanging indent
# E123 	closing bracket does not match indentation of opening bracket’s line
# E226 	missing whitespace around arithmetic operator
# E241 	multiple spaces after ‘,’
# E242 	tab after ‘,’
# W292	no newline at end of file
