[metadata]
description-file = README.md

[flake8]
# First iteration: we ignore all flake8 errors, will come back to this, removing ignores 1 by 1 and cleaning up related code
ignore = E121,E122,E127,E128,E226,E231,E261,E302
max-line-length = 200

# PEP error codes:
# E121 continuation line under-indented for hanging indent
# E122 continuation line missing indentation or outdented
# E127 continuation line over-indented for visual indent
# E128 continuation line under-indented for visual indent
# E226 missing whitespace around arithmetic operator
# E231 missing whitespace after ':'
# E261 at least two spaces before inline comment
# E302 expected 2 blank lines, found 1
